force-app/main/default/objects/ImportRequestQueueItem__c/ImportRequestQueueItem__c.object-meta.xml
<CustomObject>
    <description>Import request queue item</description>
    <label>ImportRequestQueueItem</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>ImportRequestQueueItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ImportRequestQueueItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>