force-app/main/default/objects/ImportRequestQueueItem__c/fields/BatchJobAssigned__c.field-meta.xml
<CustomField>
    <fullName>BatchJobAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the batch job is assigned</description>
    <label>BatchJobAssigned</label>
    <type>Checkbox</type>
</CustomField>