force-app/main/default/objects/ImportRequestQueueItem__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <description>batch job id</description>
    <label>BatchJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>