force-app/main/default/objects/ImportRequestQueueItem__c/fields/ConsumerAppClassName__c.field-meta.xml
<CustomField>
    <fullName>ConsumerAppClassName__c</fullName>
    <formula>Queue__r.Datasource__r.ConsumerApexClass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ConsumerAppClassName</label>
    <type>Text</type>
</CustomField>