force-app/main/default/objects/ImportRequestQueueItem__c/fields/Datasource__c.field-meta.xml
<CustomField>
    <fullName>Datasource__c</fullName>
    <description>Data Source ID</description>
    <formula>Queue__r.Datasource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datasource</label>
    <type>Text</type>
</CustomField>