force-app/main/default/objects/ImportRequestQueueItem__c/fields/ErrorAttachment__c.field-meta.xml
<CustomField>
    <fullName>ErrorAttachment__c</fullName>
    <description>Error attachment ID</description>
    <label>Error Attachment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>