force-app/main/default/objects/ImportRequestQueueItem__c/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <label>ErrorCount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>