force-app/main/default/objects/ImportRequestQueueItem__c/fields/LockProject__c.field-meta.xml
<CustomField>
    <fullName>LockProject__c</fullName>
    <formula>Queue__r.Datasource__r.LockProject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LockProject</label>
    <type>Checkbox</type>
</CustomField>