force-app/main/default/objects/ImportRequestQueueItem__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue</label>
    <referenceTo>ImportRequestQueue__c</referenceTo>
    <relationshipLabel>Queues</relationshipLabel>
    <relationshipName>Queue_del</relationshipName>
    <type>Lookup</type>
</CustomField>