force-app/main/default/objects/ImportRequestQueueItem__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <label>RecordCount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>