force-app/main/default/objects/ImportRequestQueueItem__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <formula>Queue__r.Requestor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>